--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                                     </div>
                                 </a>
                                 <!-- Medium  Button -->
-                                <a href="https://www.facebook.com/ieeeditu/" target="blank" class="social-margin">
+                                <a href="https://medium.com/@amberkakkar01" target="blank" class="social-margin">
                                     <div class="social-icon medium">
                                         <i class="fa fa-medium" aria-hidden="true"></i>
                                     </div>
